# chip-atlas-ontology-mapper

./: .gitignore  CLAUDE.md  INSTRUCTIONS.md  README.md  pyproject.toml
.claude/skills/gcell-chipatlas/: SKILL.md  helpers.py
src/caom/: __init__.py  api.py  cache.py  config.py  schema.py  types.py
src/caom/llm/: __init__.py  client.py  prompts.py
src/caom/ontologies/: cellosaurus.py  efo.py  update.py
src/caom/retrieval/: embedder.py  index.py
tests/: conftest.py  test_best_pick.py  test_cellosaurus.py  test_efo.py  test_llm.py  test_retrieval.py  test_review_mode.py  test_skeleton.py
tests/validation/: ikeda_gold_standard.py  metrics.py  run_full_pipeline.py  run_matcha_smoke.py  runner.py  test_accuracy.py  test_gold_standard_loader.py  test_matcha_smoke.py  test_metrics.py
