[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caom"
version = "0.0.1"
description = "Map ChIP-Atlas cell_type annotations to standardized biomedical ontologies (Cellosaurus + EFO)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Brandon Lukas" }]
keywords = ["ChIP-Atlas", "ontology", "Cellosaurus", "EFO", "entity linking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14",
    "pronto>=2.5",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "ollama>=0.3",
    "pydantic>=2.5",
    "tqdm>=4.66",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Repository = "https://github.com/brandonlukas/chip-atlas-ontology-mapper"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
caom = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
